2009-03-16 Gustavo Noronha Silva <gns@gnome.org> and Thadeu Lima de Souza Cascardo <cascardo@holoscopio.com>

Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=24638
        [GTK] HTML5 media tags do not work

        Work-around the fact that gst_element_query_duration returns true even
        though it is unable to figure out the duration when in stream (push)
        mode.

        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::MediaPlayerPrivate::duration):

Canonical link: https://commits.webkit.org/33813@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41756 268f45cc-cd09-0410-ab3c-d52691b4dbfc